--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/TheCapricorn/ssr-demo/issues"
   },
-  "homepage": "https://github.com/TheCapricorn/ssr-demo#readme"
+  "homepage": "https://github.com/TheCapricorn/ssr-demo#readme",
+  "dependencies": {
+    "koa": "^2.7.0",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
+    "react-router-config": "^5.0.0",
+    "react-router-dom": "^5.0.0"
+  }
 }
