--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://github.com/TheCapricorn/ssr-demo#readme",
   "dependencies": {
     "koa": "^2.7.0",
+    "koa-router": "^7.4.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
     "react-router": "^5.0.0",
     "react-router-config": "^5.0.0",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "webpack-merge": "^4.2.1"
   }
 }
