--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:client": " webpack --config  ./config/webpack.client.config.js"
+    "start:client": " webpack  webpack-dev-server    --config  ./config/webpack.client.config.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^2.0.1",
