--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:client": "   webpack-dev-server    --config  ./config/webpack.client.config.js"
+    "start:client": "   webpack-dev-server    --config  ./config/webpack.client.config.js",
+    "build:client": " webpack --config ./config/webpack.clientPord.js",
+    "build:server": "   webpack --config ./config/webpack.server.config.js",
+    "start:server": "nodemon --watch serverBuild --exec node \"./serverBuild/main.js\""
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,7 @@
   "homepage": "https://github.com/TheCapricorn/ssr-demo#readme",
   "dependencies": {
     "koa": "^2.7.0",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -32,12 +36,15 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
+    "fs-extra": "^7.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.10",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "react-hot-loader": "^4.8.0",
@@ -54,6 +61,11 @@
       "@babel/preset-react",
       [
         "@babel/preset-env"
+      ]
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-transform-runtime"
       ]
     ]
   }
