--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa": "^2.7.0",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-redux": "^6.0.1",
@@ -32,12 +33,14 @@
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/helper-module-imports": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.5.0",
     "babel-loader": "^8.0.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -66,6 +69,9 @@
     "plugins": [
       [
         "@babel/plugin-transform-runtime"
+      ],
+      [
+        "@babel/plugin-transform-async-to-generator"
       ]
     ]
   }
